aggiornate pagine per visualizzare una ricetta